# lem_in

./: .gitignore  CMakeLists.txt  lem-in.pages  main.c  test.c  todo
create_map/: .babelrc  package-lock.json  package.json  webpack.config.js
create_map/maker/: canvas.js  fusebox.js  index.html  index.js
create_map/maker/src/: function.ts  index.js  index.ts
create_map/public/: canvas.js  index.html
create_map/public/visualisateur/: canvas.js  tr  visu.html
create_map/server/: server.js
create_map/server/config/: config.js  config.json
create_map/server/db/: mongoose.js
create_map/server/middleware/: authenticate.js
create_map/server/models/: patient.js  user.js
create_map/visu/: canvas.js  data.js  find_path.js  fusebox.js  generate_file.js  index.html  move_f.js  visu.html
libft/: Makefile  ft_library_header.h
libft/include/: align.h  argv.h  dll_header.h  dll_l_header.h  err_header.h  libft_memory_function.h  libft_nb_function.h  libft_str_function.h  printf_header.h  tab.h
libft/include/struct/: dll_struct.h
libft/src/argv/: ask_gnl.c  errno_exit.c  ft_error.c  get_next_line.c
libft/src/error/: print_err_and_return.c
libft/src/memory/: ft_0_new_memory.c
libft/src/nb/: ft_atoi.c
project/: algo_1.c  all_includes.h  depreciate.c
project/algo/: get_path.c
project/data/: best_path.c  cache.c  finder.c  finder_&_finder_link.c  lem.c  map.c  move.c  path.c  room.c  tunnel.c
project/debug/: debug_finder.c  debug_map.c  debug_parseur.c  debug_path.c  debug_print.c  debug_set.c  debug_solver.c
project/debug/src/: debug_finder.c  debug_map.c  debug_parseur.c  debug_path.c  debug_solver.c
project/depreciate/: depreciate.c  get_path.c
project/includes/: all_includes.h  err_name.h  function.h  getter.h  struct.h  struct_algo.h  struct_min.h
project/parseur/: cache.c  get_room.c  get_room_utils.c  get_tunnel.c  getter.c  path.c  set_tab_tunnel.c
project/solver/: clean_working_dll.c  generate_map_path.c  get_list_path.c  get_path.c
project/solver/all/: clean_working_dll.c  generate_map_path.c
project/solver/big_algo/: main_big_algo.c
project/solver/move/: one.c
project/solver/short_algo/: algo.c  find_best_path.c  main_short_algo.c
project/solver/sort_path/: generate_map_path.c
project/solver/split_path/: clean_working_dll.c  split_path.c
project/test/: big  etst  hard  map (1).txt  map (5).txt  test_2
project/test/fourmis/: f_big  f_neg_big  f_negatif  no_fourmis  random_plus
project/utils/: error.c
rendu/: Makefile  includes  lem
rendu/src/: data  debug  parseur  solver  utils
rendu/test/: a.sh  hard  lem  map (5).txt  test_2  test_2_test
rendu/test/1__bad_ants/: enter  f_comment
rendu/test/2__err_room/: bad_end_1  bad_end_2  bad_end_3  entrer  (+18 more)
src/: main.c
src/data/: best_path.c  cache.c  finder_finder_link.c  lem.c  map.c  move.c  room.c  tunnel.c
src/debug/: debug_set.c
src/includes/: all_includes.h  err_name.h  function.h  getter.h  struct.h  struct_algo.h  struct_min.h
src/parseur/: get_room.c  get_room_utils.c  get_tunnel.c  getter.c
src/solver/: move_f.c
src/test/: test_1
test/: test_room.c
(+79 files in other folders)
